--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -67,5 +67,6 @@
 @import "components/services";
 @import "components/breadcrumbs";
 @import "components/paid-services";
+@import "components/packaging";
 @import "components/customs";
 @import "components/insurance";
