--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -3552,7 +3552,7 @@ a {
     font-weight: 400;
     margin-bottom: 10px; }
     .list li:last-child {
-      margin: 0; }
+      margin-bottom: 0; }
     .list li::before {
       content: "";
       display: block;
@@ -3849,6 +3849,7 @@ a {
 
 .main-nav__logo {
   position: relative;
+  flex-shrink: 0;
   z-index: 100; }
 
 .main-nav__wrapper {
@@ -5010,8 +5011,7 @@ a {
   text-align: center; }
   @media (min-width: 992px) {
     .tariffs {
-      padding: 70px 0;
-      padding-bottom: 60px;
+      padding-top: 70px;
       text-align: left; } }
 
 .tariffs__wrapper {
@@ -5273,6 +5273,156 @@ a {
   text-align: center;
   letter-spacing: 0;
   margin: 0; }
+
+.tariff-info {
+  padding-top: 200px;
+  background-color: #ffffff;
+  border-radius: 20px;
+  margin-top: -175px;
+  text-align: left; }
+  @media (min-width: 992px) {
+    .tariff-info {
+      padding-top: 25px;
+      margin-top: 0; } }
+
+.tariff-info__wrapper {
+  padding: 0 40px; }
+
+.tariff-info__tariff-list {
+  list-style: none;
+  padding: 0;
+  margin: 0; }
+
+.tariff-info__title {
+  display: block;
+  margin-bottom: 20px; }
+  @media (min-width: 768px) {
+    .tariff-info__title {
+      margin-bottom: 20px; } }
+
+.tariff-info__list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  margin-bottom: 40px; }
+  .tariff-info__list:last-child {
+    margin-bottom: 0; }
+  @media (min-width: 768px) {
+    .tariff-info__list {
+      display: flex;
+      flex-wrap: wrap; } }
+  .tariff-info__list li {
+    padding-left: 23px;
+    font-size: 16px;
+    line-height: 29px;
+    font-weight: 300;
+    margin-bottom: 0;
+    margin-top: 20px; }
+    .tariff-info__list li:first-child {
+      margin-top: 0; }
+    .tariff-info__list li::before {
+      top: 12px;
+      left: -3px; }
+    @media (min-width: 768px) {
+      .tariff-info__list li:first-child {
+        margin-top: 20px; } }
+  @media (min-width: 768px) {
+    .tariff-info__list--2 li {
+      margin-right: 100px;
+      width: calc(50% - 50px); }
+      .tariff-info__list--2 li:nth-child(2n) {
+        margin-right: 0; }
+    .tariff-info__list--4 li {
+      margin-right: 75px;
+      width: calc(50% - 75px / 2); }
+      .tariff-info__list--4 li:nth-child(2n) {
+        margin-right: 0; }
+    .tariff-info__list--5 li {
+      margin-right: 50px;
+      width: calc(33.3334% - 100px / 3); }
+      .tariff-info__list--5 li:nth-child(3n) {
+        margin-right: 0; } }
+  @media (min-width: 1240px) {
+    .tariff-info__list--2 li {
+      margin-right: 100px;
+      width: calc(50% - 50px); }
+      .tariff-info__list--2 li:nth-child(2n) {
+        margin-right: 0; }
+    .tariff-info__list--4 li {
+      margin-right: 75px;
+      width: calc(25% - 225px / 4); }
+      .tariff-info__list--4 li:nth-child(2n) {
+        margin-right: 75px; }
+      .tariff-info__list--4 li:nth-child(4n) {
+        margin-right: 0; }
+    .tariff-info__list--5 li {
+      margin-right: 50px;
+      width: calc(20% - 200px / 5); }
+      .tariff-info__list--5 li:nth-child(5n) {
+        margin-right: 0; } }
+  .tariff-info__list--bg {
+    border-radius: 20px;
+    background-color: #ffffff;
+    box-shadow: 0 24px 30px 0 rgba(0, 0, 0, 0.05);
+    padding: 20px 30px;
+    margin-left: -30px;
+    margin-right: -30px;
+    box-shadow: 0 0 30px 0 rgba(0, 0, 0, 0.05); }
+    @media (min-width: 768px) {
+      .tariff-info__list--bg {
+        padding: 30px 21px;
+        padding-top: 10px;
+        margin-left: -12px;
+        margin-right: -12px;
+        margin-bottom: 20px; } }
+
+.tariff-info__term {
+  display: block;
+  font-size: 16px;
+  line-height: 29px;
+  font-weight: 500;
+  color: #282828;
+  margin-bottom: 5px; }
+  @media (min-width: 768px) {
+    .tariff-info__term {
+      margin-bottom: 10px; } }
+  @media (min-width: 1240px) {
+    .tariff-info__term {
+      min-height: 58px; } }
+
+.tariff-info__value {
+  display: block;
+  font-size: 14px;
+  line-height: 25px;
+  font-weight: 300; }
+
+.tariff-info__heading {
+  display: block;
+  font-weight: 500;
+  margin-bottom: 10px; }
+
+.tariff-info__limits {
+  padding: 40px;
+  color: #ffffff;
+  background-color: #282828;
+  border-radius: 20px;
+  box-shadow: 0 0 30px 0 rgba(0, 0, 0, 0.05);
+  margin-top: 40px; }
+  @media (min-width: 768px) {
+    .tariff-info__limits {
+      padding: 40px 50px; } }
+
+.tariff-info__limits-title {
+  display: block;
+  color: #ffffff;
+  margin: 0;
+  margin-bottom: 20px; }
+  @media (min-width: 768px) {
+    .tariff-info__limits-title {
+      margin-bottom: 10px; } }
+
+.tariff-info__limits-list li {
+  font-weight: 500; }
 
 .work-scheme {
   overflow: hidden; }
@@ -5823,13 +5973,13 @@ a {
       right: -30px;
       top: 50%; } }
 
-.reviews-slider__dots {
+.reviews__slider-dots {
   position: absolute;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%); }
   @media (min-width: 768px) {
-    .reviews-slider__dots {
+    .reviews__slider-dots {
       display: none; } }
 
 .review__wrapper {
@@ -5885,6 +6035,12 @@ a {
       margin-bottom: 14px; } }
   .review__city::before {
     background-image: url("../img/location-icon.svg"); }
+
+.review__order a {
+  transition: color 0.2s ease;
+  color: #1467ff; }
+  .review__order a:hover {
+    color: #084fd1; }
 
 .review__order::before {
   background-image: url("../img/parcel-icon.svg"); }
@@ -6099,6 +6255,7 @@ a {
 @media (min-width: 992px) {
   .services__list-wrapper {
     max-width: none;
+    padding-bottom: 10px;
     margin: 0; } }
 
 .services__list {
@@ -6160,14 +6317,17 @@ a {
     left: 0;
     position: absolute;
     border-radius: 50%;
-    background-image: radial-gradient(#ffffff, #ffffff 4px, #282828 5px, #282828 7px, transparent 8px);
-    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25), 0 14px 14px 0 rgba(128, 128, 128, 0.32);
-    border: 2px solid #c1c1c1;
+    background-image: radial-gradient(#ffffff, #ffffff 5px, #282828 6px, #282828 7px, #c1c1c1 8px);
+    box-shadow: 0 4px 14px rgba(128, 128, 128, 0.22);
     z-index: 1; }
   @media (min-width: 768px) {
     .services__title {
       padding: 0 0 0 40px;
-      min-height: 52px; } }
+      min-height: 52px; }
+      .services__title::before {
+        width: 25px;
+        height: 25px;
+        background-image: radial-gradient(#ffffff, #ffffff 6px, #282828 7px, #282828 8px, #c1c1c1 9px); } }
   @media (min-width: 992px) {
     .services__title {
       padding: 0 40px;
@@ -6225,7 +6385,9 @@ a {
   font-size: 12px;
   line-height: 22px;
   font-weight: 400; }
-  .breadcrumbs__item:first-child::after {
+  .breadcrumbs__item a {
+    color: #282828; }
+  .breadcrumbs__item:not(:last-child)::after {
     content: "/";
     width: 22px;
     height: 22px;
@@ -6240,3 +6402,421 @@ a {
 
 .breadcrumbs__item--active {
   font-weight: 700; }
+
+.paid-services {
+  overflow: hidden; }
+
+.paid-services__wrapper {
+  padding: 0 7px;
+  background-color: #282828;
+  border-radius: 20px; }
+
+.paid-services__heading {
+  color: #ffffff;
+  padding: 60px 13px 63px;
+  text-align: center;
+  margin: 0; }
+  @media (min-width: 992px) {
+    .paid-services__heading {
+      font-size: 60px;
+      line-height: 78px;
+      text-align: left;
+      padding: 104px 0 100px; } }
+
+.paid-services__list {
+  list-style: none;
+  padding: 0;
+  margin: 0; }
+  @media (min-width: 992px) {
+    .paid-services__list {
+      padding: 0 30px; } }
+
+.paid-services__item {
+  margin-bottom: 43px;
+  padding: 37px 26px 20px;
+  text-align: center;
+  border-radius: 14px;
+  background-color: #ffffff;
+  position: relative; }
+  .paid-services__item:last-child {
+    margin-bottom: 0; }
+  .paid-services__item::before {
+    content: "";
+    display: block;
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    top: -25px;
+    left: 50%;
+    transform: translateX(-50%);
+    border-radius: 50%;
+    background-image: url("../img/services-paid-dollar-sign.svg"), radial-gradient(#ffffff, #ffffff 9px, #282828 10px, #282828 15px, #c1c1c1 16px);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 8px 13px, 40px 40px; }
+  @media (min-width: 992px) {
+    .paid-services__item {
+      margin-bottom: 20px;
+      padding: 20px 20px 20px 72px;
+      display: flex;
+      align-items: center;
+      justify-content: flex-start;
+      text-align: left; }
+      .paid-services__item::before {
+        width: 60px;
+        height: 60px;
+        transform: none;
+        left: -24px;
+        top: 16px;
+        background-image: url("../img/services-paid-dollar-sign.svg"), radial-gradient(#ffffff, #ffffff 14px, #282828 15px, #282828 22px, #c1c1c1 23px);
+        background-size: 12px 19px, 60px 60px; }
+      .paid-services__item:last-child {
+        padding-bottom: 20px; } }
+
+.paid-services__desc {
+  margin: 0 0 10px 0;
+  line-height: 29px;
+  font-weight: 400; }
+  @media (min-width: 992px) {
+    .paid-services__desc {
+      font-size: 20px;
+      line-height: 36px;
+      margin: 0;
+      width: 77.5%;
+      padding-right: 20px;
+      flex-shrink: 0; } }
+
+.paid-services__cost {
+  margin: 0;
+  font-size: 18px;
+  line-height: 32px;
+  font-weight: 700;
+  color: #1467ff; }
+  @media (min-width: 992px) {
+    .paid-services__cost {
+      font-size: 30px;
+      line-height: 54px; } }
+
+.paid-services__cost-note {
+  font-size: 14px;
+  line-height: 18px;
+  font-weight: 500;
+  margin: 0; }
+  @media (min-width: 992px) {
+    .paid-services__cost-note {
+      font-size: 16px;
+      line-height: 21px;
+      bottom: 0;
+      padding-left: 20px; } }
+
+.packaging__heading {
+  color: #ffffff;
+  padding: 61px 10px 40px;
+  text-align: center;
+  margin: 0; }
+  @media (min-width: 992px) {
+    .packaging__heading {
+      text-align: left;
+      padding: 155px 0 98px; } }
+
+.packaging__list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  padding-bottom: 41px; }
+  @media (min-width: 992px) {
+    .packaging__list {
+      padding-bottom: 154px;
+      display: flex;
+      justify-content: space-between;
+      flex-wrap: wrap; } }
+
+.packaging__item {
+  color: #ffffff;
+  text-align: center;
+  position: relative; }
+  .packaging__item::before {
+    content: "";
+    display: block;
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    border-radius: 50%;
+    background-image: url("../img/packaging-cross-sign.svg"), radial-gradient(#ffffff, #ffffff 9px, #1467ff 10px, #1467ff 15px, #bbd3ff 16px);
+    background-position: top 15px left 15px, center;
+    background-repeat: no-repeat;
+    background-size: 10px 10px, 40px 40px; }
+  @media (min-width: 992px) {
+    .packaging__item {
+      text-align: left;
+      width: 24%; }
+      .packaging__item::before {
+        width: 60px;
+        height: 60px;
+        transform: none;
+        left: 0;
+        top: -29px;
+        background-image: url("../img/packaging-cross-sign.svg"), radial-gradient(#ffffff, #ffffff 14px, #1467ff 15px, #1467ff 22px, #bbd3ff 23px);
+        background-position: top 23px left 23px, center;
+        background-size: 14px 14px, 60px 60px; } }
+
+.packaging__item-wrapper {
+  padding: 60px 7px 20px; }
+  @media (min-width: 992px) {
+    .packaging__item-wrapper {
+      padding: 50px 13px 0 0; } }
+
+.packaging__desc {
+  margin: 0 0 10px;
+  line-height: 29px;
+  font-weight: 400; }
+  @media (min-width: 992px) {
+    .packaging__desc {
+      font-size: 20px;
+      line-height: 36px;
+      margin-bottom: 20px; } }
+
+.packaging__cost {
+  margin: 0;
+  font-size: 18px;
+  line-height: 32px;
+  font-weight: 700; }
+  @media (min-width: 992px) {
+    .packaging__cost {
+      font-size: 30px;
+      line-height: 54px; } }
+
+.packaging__cost-note {
+  margin: 0;
+  font-size: 14px;
+  line-height: 18px;
+  font-weight: 500; }
+  @media (min-width: 992px) {
+    .packaging__cost-note {
+      font-size: 16px;
+      line-height: 21px;
+      transform: none;
+      left: 5px; } }
+
+.customs {
+  overflow: hidden;
+  margin-bottom: 60px; }
+  @media (min-width: 992px) {
+    .customs {
+      margin-bottom: 20px; } }
+
+.customs__title {
+  text-align: center;
+  margin: 0 0 40px;
+  padding: 0 35px; }
+  @media (min-width: 992px) {
+    .customs__title {
+      text-align: left;
+      margin: 0 0 100px;
+      padding: 0;
+      width: 50%; } }
+
+.customs__wrapper {
+  position: relative; }
+  @media (min-width: 992px) {
+    .customs__wrapper::before {
+      content: "";
+      position: absolute;
+      display: block;
+      width: 552px;
+      height: 423px;
+      transform: none;
+      top: -15px;
+      left: 7px;
+      background-image: url("../img/customs.png"); } }
+
+.customs__desc {
+  line-height: 29px;
+  text-align: center;
+  margin: 0;
+  padding: 0 7px 236px;
+  position: relative; }
+  .customs__desc::after {
+    content: "";
+    position: absolute;
+    display: block;
+    transform: translateX(50%);
+    bottom: 33px;
+    left: calc(50% - 198px);
+    width: 227px;
+    height: 174px;
+    background-image: url("../img/customs-mobile.png");
+    background-repeat: no-repeat;
+    background-size: 100%; }
+  @media (min-width: 992px) {
+    .customs__desc {
+      font-size: 20px;
+      line-height: 36px;
+      text-align: left;
+      margin: 0 0 27px 0;
+      padding: 0 10px 0 0; }
+      .customs__desc::after {
+        display: none; } }
+
+.customs__cost {
+  font-family: "Jost", "Arial", sans-serif;
+  font-size: 20px;
+  line-height: 26px;
+  font-weight: 700;
+  text-align: center;
+  letter-spacing: 0;
+  padding: 38px 25px;
+  margin: 0;
+  border: 2px dashed #808181;
+  border-radius: 30px;
+  background-color: #fbfbfb; }
+  @media (min-width: 992px) {
+    .customs__cost {
+      font-size: 30px;
+      line-height: 39px;
+      padding: 35px 49px; } }
+
+.insurance {
+  overflow: hidden; }
+  @media (min-width: 992px) {
+    .insurance {
+      padding-top: 80px; } }
+
+.insurance__heading {
+  margin: 0 0 21px;
+  text-align: center; }
+  @media (min-width: 992px) {
+    .insurance__heading {
+      text-align: left;
+      margin: 0 0 100px; } }
+
+.insurance__text-wrapper {
+  margin-bottom: 203px; }
+  @media (min-width: 992px) {
+    .insurance__text-wrapper {
+      margin-bottom: 0;
+      padding-left: 6px; } }
+
+.insurance__text {
+  text-align: center;
+  margin: 0 0 39px;
+  padding: 0 25px; }
+  @media (min-width: 992px) {
+    .insurance__text {
+      padding: 0;
+      text-align: left;
+      margin-bottom: 63px; } }
+
+.insurance__list {
+  margin: 0 15px 0 22px; }
+  @media (min-width: 992px) {
+    .insurance__list {
+      margin-left: 0;
+      padding-right: 20px; } }
+
+.insurance__list li {
+  margin-bottom: 20px; }
+  .insurance__list li:last-child {
+    margin-bottom: 0; }
+
+.insurance__price-wrapper {
+  padding-right: 0;
+  padding-left: 0; }
+  @media (min-width: 992px) {
+    .insurance__price-wrapper {
+      padding-top: 181px;
+      padding-right: 80px; } }
+
+.insurance__price-heading {
+  margin: 0 0 40px;
+  text-align: center;
+  position: relative; }
+  .insurance__price-heading::before {
+    content: "";
+    display: block;
+    width: 183px;
+    height: 167px;
+    position: absolute;
+    left: calc(50% + 25px);
+    top: -200px;
+    transform: translateX(-50%);
+    background-image: url("../img/insurance-lock-mobile.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    z-index: 1; }
+  .insurance__price-heading::after {
+    content: "";
+    display: block;
+    width: 312px;
+    height: 175px;
+    position: absolute;
+    transform: translateX(-50%);
+    left: calc(50% - 47px);
+    top: -252px;
+    background-image: url("../img/insurance-line-mobile.svg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    z-index: -1; }
+  @media (min-width: 992px) {
+    .insurance__price-heading {
+      text-align: left; }
+      .insurance__price-heading::before {
+        width: 254px;
+        height: 227px;
+        transform: translateX(50%);
+        left: calc(50% - 50px);
+        top: -244px;
+        background-image: url("../img/insurance-lock.png"); }
+      .insurance__price-heading::after {
+        width: 1083px;
+        height: 1547px;
+        left: -142px;
+        transform: translateY(-35%);
+        top: -255px;
+        background-image: url("../img/insurance-line.svg"); } }
+
+.insurance__pricelist {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between; }
+
+.insurance__pricelist-item {
+  width: calc(50% - 10px);
+  text-align: center;
+  padding: 19px 20px 18px 21px;
+  border-radius: 14px;
+  background-color: #ffffff;
+  box-shadow: 0 17px 22px rgba(0, 0, 0, 0.05);
+  margin-bottom: 23px; }
+  @media (min-width: 992px) {
+    .insurance__pricelist-item {
+      padding: 38px 20px 22px 21px;
+      margin-bottom: 32px; } }
+
+.insurance__pricelist-tier {
+  font-weight: 700;
+  line-height: 29px;
+  margin: 0; }
+  @media (min-width: 992px) {
+    .insurance__pricelist-tier {
+      font-size: 20px;
+      line-height: 34px; } }
+
+.insurance__pricelist-rate {
+  font-size: 18px;
+  line-height: 32px;
+  font-weight: 700;
+  color: #1467ff;
+  margin: 0; }
+  @media (min-width: 992px) {
+    .insurance__pricelist-rate {
+      font-size: 30px;
+      line-height: 54px; } }
