--- a/src/scss/components/_customs.scss
+++ b/src/scss/components/_customs.scss
@@ -31,7 +31,7 @@
       width: 552px;
       height: 423px;
       transform: none;
-      bottom: -13px;
+      top: -15px;
       left: 7px;
       background-image: url("../img/customs.png");
     }
@@ -78,6 +78,7 @@
   line-height: 26px;
   font-weight: 700;
   text-align: center;
+  letter-spacing: 0;
   padding: 38px 25px;
   margin: 0;
   border: 2px dashed $grey-medium-1;
