--- a/src/scss/components/_tariff-info.scss
+++ b/src/scss/components/_tariff-info.scss
@@ -5,9 +5,11 @@
   margin-top: -175px;
   text-align: left;
 
-  @include media-breakpoint-up(lg) {
+  @include media-breakpoint-up(md) {
+    position: relative;
     padding-top: 25px;
     margin-top: 0;
+    z-index: 1;
   }
 }
 
@@ -17,6 +19,14 @@
 
 .tariff-info__tariff-list {
   @include list-reset;
+}
+
+.tariff-info__tariff {
+  display: none;
+
+  &--active {
+    display: block;
+  }
 }
 
 .tariff-info__title {
