--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -24,8 +24,8 @@
 
   <script>
     tippy('.question-mark', {
-      trigger: 'click',
-      hideOnClick: true,
+      //trigger: 'click',
+      //hideOnClick: true,
     });
   </script>
 </body>
