--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -4155,8 +4155,15 @@ a {
   list-style: none;
   padding: 0;
   margin: 0;
+  position: absolute;
+  width: 100%;
+  height: 0;
+  transform: translateY(-20px);
   display: flex;
   justify-content: space-between; }
+  @media (min-width: 1240px) {
+    .slider-nav {
+      transform: translateY(-30px); } }
 
 .slider-nav__btn {
   padding: 0;
@@ -5103,15 +5110,27 @@ a {
 
 .tariff {
   position: relative;
+  padding: 30px;
+  cursor: pointer;
   border-radius: 20px;
   background-color: #ffffff;
-  box-shadow: 0 24px 30px 0 rgba(0, 0, 0, 0.05);
-  padding: 30px; }
+  box-shadow: 0 24px 30px 0 rgba(0, 0, 0, 0.05); }
   @media (min-width: 992px) {
     .tariff {
       padding-top: 24px; } }
   .tariff--active {
     background-color: #ffe200; }
+    @media (min-width: 768px) {
+      .tariffs--with-info .tariff--active::after {
+        content: "";
+        display: block;
+        height: 120px;
+        position: absolute;
+        left: 0;
+        right: 0;
+        bottom: -120px;
+        background-color: #ffffff;
+        z-index: -1; } }
   .tariff::before {
     content: "";
     display: block;
@@ -5280,10 +5299,12 @@ a {
   border-radius: 20px;
   margin-top: -175px;
   text-align: left; }
-  @media (min-width: 992px) {
+  @media (min-width: 768px) {
     .tariff-info {
+      position: relative;
       padding-top: 25px;
-      margin-top: 0; } }
+      margin-top: 0;
+      z-index: 1; } }
 
 .tariff-info__wrapper {
   padding: 0 40px; }
@@ -5292,6 +5313,11 @@ a {
   list-style: none;
   padding: 0;
   margin: 0; }
+
+.tariff-info__tariff {
+  display: none; }
+  .tariff-info__tariff--active {
+    display: block; }
 
 .tariff-info__title {
   display: block;
@@ -5609,7 +5635,8 @@ a {
   background-color: #ddeaff;
   border: 2px dashed #808181;
   border-radius: 40px;
-  text-align: center; }
+  text-align: center;
+  color: #282828; }
   @media (min-width: 768px) {
     .promo-slider__item {
       flex-direction: row;
@@ -5676,17 +5703,12 @@ a {
       display: block;
       position: absolute;
       height: 0;
-      top: calc(50% - 20px);
+      top: 50%;
       left: -15px;
       right: -15px;
-      z-index: 1; }
-      .promo-slider__nav ul {
-        position: absolute;
-        width: 100%;
-        height: 0; } }
+      z-index: 1; } }
   @media (min-width: 992px) {
     .promo-slider__nav {
-      top: calc(50% - 30px);
       left: 0;
       right: 0; } }
   @media (min-width: 1600px) {
