--- a/src/scss/components/_promo-slider.scss
+++ b/src/scss/components/_promo-slider.scss
@@ -28,6 +28,7 @@
   border: 2px dashed #808181;
   border-radius: 40px;
   text-align: center;
+  color: $grey-dark;
 
   @include media-breakpoint-up(md) {
     flex-direction: row;
@@ -108,20 +109,13 @@
     display: block;
     position: absolute;
     height: 0;
-    top: calc(50% - 20px);
+    top: 50%;
     left: -15px;
     right: -15px;
     z-index: 1;
-
-    ul {
-      position: absolute;
-      width: 100%;
-      height: 0;
-    }
   }
 
   @include media-breakpoint-up(lg) {
-    top: calc(50% - 30px);
     left: 0;
     right: 0;
   }
