--- a/src/scss/components/_slider-nav.scss
+++ b/src/scss/components/_slider-nav.scss
@@ -1,6 +1,8 @@
 .slider-nav {
   @include list-reset;
   position: absolute;
+  left: 0;
+  top: 0;
   width: 100%;
   height: 0;
   transform: translateY(-20px);
