--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -4156,6 +4156,8 @@ a {
   padding: 0;
   margin: 0;
   position: absolute;
+  left: 0;
+  top: 0;
   width: 100%;
   height: 0;
   transform: translateY(-20px);
@@ -5933,11 +5935,10 @@ a {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: 40px; }
+  margin-top: 100px; }
   @media (min-width: 992px) {
     .reviews__links {
-      flex-direction: row;
-      margin-top: 100px; } }
+      flex-direction: row; } }
 
 .reviews__map-link {
   position: relative;
@@ -5966,7 +5967,7 @@ a {
 .reviews__slider-nav {
   position: relative;
   padding: 0 20px;
-  margin-top: 20px; }
+  margin-top: 40px; }
   @media (min-width: 768px) {
     .reviews__slider-nav {
       padding: 0;
