--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -5114,6 +5114,7 @@ a {
   position: relative;
   padding: 30px;
   cursor: pointer;
+  -webkit-tap-highlight-color: transparent;
   border-radius: 20px;
   background-color: #ffffff;
   box-shadow: 0 24px 30px 0 rgba(0, 0, 0, 0.05); }
