--- a/src/scss/components/_tariffs.scss
+++ b/src/scss/components/_tariffs.scss
@@ -19,7 +19,7 @@
       content: "";
       display: block;
       width: 50vw;
-      height: calc(100% + 80px);
+      height: 200%;
       position: absolute;
       left: 100%;
       top: -20px;
