--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -4146,8 +4146,26 @@ a {
     opacity: 1;
     transition: opacity 0.2s ease;
     will-change: opacity; }
+  .button::after {
+    content: "";
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    background-color: #1467ff;
+    border-radius: 20px;
+    z-index: -1;
+    transition: none; }
   .button:hover::before {
     opacity: 0; }
+  .button:hover::after {
+    transform: scale(1.3, 1.5);
+    opacity: 0;
+    visibility: hidden;
+    transition: all 0.5s ease; }
   .button:active {
     background-color: #084fd1; }
 
