--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -33,9 +33,31 @@
     will-change: opacity;
   }
 
+  &::after {
+    content: "";
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    background-color: rgba($blue, 1);
+    border-radius: 20px;
+    z-index: -1;
+    transition: none;
+  }
+
   &:hover {
     &::before {
       opacity: 0;
+    }
+
+    &::after {
+      transform: scale(1.3, 1.5);
+      opacity: 0;
+      visibility: hidden;
+      transition: all 0.5s ease;
     }
   }
 
