--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -4152,7 +4152,6 @@ a {
     display: block;
     width: 100%;
     height: 100%;
-    position: absolute;
     left: 0;
     top: 0;
     background-color: #1467ff;
@@ -4901,6 +4900,29 @@ a {
     color: #bfbfbf; }
   .form__select option:disabled {
     color: #bfbfbf; }
+
+.form__dropdown-combo {
+  position: relative;
+  width: 100%; }
+  .form__dropdown-combo ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    border-radius: 20px;
+    background-color: #ffffff;
+    box-shadow: 0 24px 30px 0 rgba(0, 0, 0, 0.05);
+    top: 100%;
+    left: 0;
+    max-width: 100%;
+    max-height: 330px;
+    padding: 10px 20px;
+    font-size: 14px;
+    line-height: 22px;
+    text-align: left;
+    z-index: 11;
+    overflow-y: scroll; }
+    .form__dropdown-combo ul li + li {
+      margin-top: 5px; }
 
 .calculator {
   overflow: hidden; }
