--- a/src/scss/components/_main-nav.scss
+++ b/src/scss/components/_main-nav.scss
@@ -46,7 +46,8 @@
   }
 
   @include media-breakpoint-up(xl) {
-    margin: 0 95px;
+    padding: 0 80px;
+    margin: 0 auto;
   }
 }
 
@@ -65,6 +66,7 @@
     }
 
     display: flex;
+    flex-wrap: wrap;
     margin-bottom: 0;
   }
 }
@@ -86,7 +88,6 @@
 }
 
 .main-nav__item {
-  line-height: 20px;
   margin-bottom: 9px;
 
   &:last-child {
@@ -103,6 +104,7 @@
   }
 
   @include media-breakpoint-up(xl) {
+    line-height: 28px;
     margin-right: 31px;
   }
 
@@ -113,6 +115,10 @@
     color: $black-1;
 
     @include color-transition;
+
+    @include media-breakpoint-up(xl) {
+      line-height: 28px;
+    }
 
     &:hover {
       color: $blue;
@@ -135,11 +141,6 @@
   border-bottom-left-radius: 20px;
   border-bottom-right-radius: 20px;
   z-index: 99;
-
-  // transition-property: transform, visibility;
-  // transition-delay: 0s, 0.3s;
-  // transition-duration: 0.3s;
-  // transition-timing-function: linear;
   transform: translateX(-100%);
   will-change: transform;
 
