--- a/src/scss/components/_user-nav.scss
+++ b/src/scss/components/_user-nav.scss
@@ -72,6 +72,7 @@
   margin-right: 10px;
 
   @include media-breakpoint-up(lg) {
+    flex-shrink: 0;
     width: 32px;
     height: 30px;
   }
@@ -100,6 +101,7 @@
   }
 
   @include media-breakpoint-up(lg) {
+    flex-shrink: 0;
     border-radius: 20px;
     box-shadow: none;
 
