WIP: добавит драфт следующего блока

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -71,3 +71,4 @@
 @import "components/customs";
 @import "components/insurance";
 @import "components/how-to-buy";
+@import "components/free-address";
