how-to-buy - html добавит секцию how-to-buy - css добавит стилизацию для моб экрана

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -71,4 +71,5 @@
 @import "components/customs";
 @import "components/insurance";
 @import "components/how-to-buy";
-@import "components/free-address";
+@import "components/how-details";
+@import "components/pricing-options";
