--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -15,6 +15,19 @@
   z-index: 1;
   cursor: pointer;
 
+  &--medium {
+    min-width: 285px;
+  }
+
+  &--small {
+    min-width: auto;
+  }
+
+  &--white {
+    color: tomato;
+    background-color: $white;
+  }
+
   &::before {
     content: "";
     position: absolute;
