--- a/src/scss/components/_how-details.scss
+++ b/src/scss/components/_how-details.scss
@@ -11,13 +11,87 @@
     position: absolute;
     background-image: url("../img/how-to-line-mobile.svg");
   }
+
+  @include media-breakpoint-up(lg) {
+    &::before {
+      display: none;
+    }
+  }
+}
+
+.how-details__block-wrapper {
+  @include media-breakpoint-up(lg) {
+    &--free-address {
+      position: relative;
+
+      &::before {
+        content: "";
+        position: absolute;
+        width: 592px;
+        height: 661px;
+        display: block;
+        left: -72px;
+        top: -214px;
+        background-image: url("../img/how-to-airplane.png");
+      }
+
+      &::after {
+        content: "";
+        position: absolute;
+        width: 599px;
+        height: 953px;
+        display: block;
+        left: 30px;
+        transform: translateY(-50%);
+        top: calc(-50% + 308px);
+        background-image: url("../img/how-to-line-1.svg");
+        z-index: -1;
+      }
+    }
+
+    &--us-prices {
+      position: relative;
+
+      &::before {
+        content: "";
+        position: absolute;
+        width: 540px;
+        height: 488px;
+        display: block;
+        transform: translateX(50%);
+        left: calc(50% - 241px);
+        top: -27px;
+        background-image: url("../img/how-to-shopping.png");
+        z-index: 1;
+      }
+
+      &::after {
+        content: "";
+        position: absolute;
+        width: 1026px;
+        height: 578px;
+        display: block;
+        left: -49px;
+        top: -80px;
+        background-image: url("../img/how-to-line-2.svg");
+      }
+    }
+  }
+}
+
+.how-details__block-container {
+  @include media-breakpoint-up(lg) {
+    padding: 0;
+    margin-bottom: 108px;
+  }
 }
 
 .how-details__wrapper {
-  padding: 12px 7px 0 40px;
+  padding: 12px 7px 20px 40px;
 
   &--shipment {
     padding-top: 210px;
+    padding-bottom: 0;
     position: relative;
 
     &::before {
@@ -32,28 +106,54 @@
       background-image: url("../img/how-to-shopping-mobile.png");
     }
   }
+
+  @include media-breakpoint-up(lg) {
+    padding: 0;
+    margin-bottom: 40px;
+
+    &--shipment {
+      &::before {
+        display: none;
+      }
+    }
+  }
 }
 
 .how-details__container {
   padding-left: 26px;
   position: relative;
 
-  &::after {
-    content: "";
-    display: block;
-    width: 90px;
-    height: 90px;
-    top: -77px;
-    left: -76px;
-    position: absolute;
-    border-radius: 50%;
-    background-image: url("../img/how-to-airplane-mobile.png");
+  &--us-prices {
+    &::after {
+      content: "";
+      display: block;
+      width: 90px;
+      height: 90px;
+      top: -77px;
+      left: -76px;
+      position: absolute;
+      background-image: url("../img/how-to-airplane-mobile.png");
+    }
+  }
+
+  @include media-breakpoint-up(lg) {
+    padding-left: 10px;
+
+    &--us-prices {
+      &::after {
+        display: none;
+      }
+    }
   }
 }
 
 .how-details__button-wrapper {
   padding: 0 23px;
   margin-bottom: 44px;
+
+  @include media-breakpoint-up(lg) {
+    padding: 0;
+  }
 }
 
 .how-details__buttons-wrapper {
@@ -89,17 +189,30 @@
 
   @include media-breakpoint-up(lg) {
     margin-bottom: 40px;
+    font-size: 40px;
+    line-height: 52px;
+
+    &::before {
+      width: 38px;
+      height: 38px;
+      top: -77px;
+      left: -2px;
+      background-image: radial-gradient($white, $white 9px, $grey-dark 10px, $grey-dark 14px, $grey-light-1 15px);
+    }
   }
 }
 
 .how-details__desc {
-  margin: 0 0 20px;
+  margin: 0;
   font-size: 14px;
   line-height: 25px;
   font-weight: 400;
   color: $grey-dark;
 
   @include media-breakpoint-up(lg) {
-    margin-bottom: 40px;
+    // margin-bottom: 69px;
+    font-size: 16px;
+    line-height: 29px;
+    padding-right: 35px;
   }
 }
