--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -73,3 +73,5 @@
 @import "components/how-to-buy";
 @import "components/how-details";
 @import "components/pricing-options";
+@import "components/main";
+@import "components/parcel";
