--- a/src/scss/components/_how-to-buy.scss
+++ b/src/scss/components/_how-to-buy.scss
@@ -15,17 +15,17 @@
     position: absolute;
     display: block;
     transform: translateX(50%);
-    left: calc(50% - 278px);
-    width: 279px;
-    height: 238px;
-    bottom: 30px;
+    right: 50%;
+    width: 360px;
+    height: 379px;
+    bottom: -66px;
     background-image: url("../img/how-to-buy-mobile.png");
     background-repeat: no-repeat;
     background-size: 100%;
   }
 
   @include media-breakpoint-up(lg) {
-    padding-bottom: 161px;
+    padding-bottom: 100px;
 
     &::after {
       display: none;
@@ -35,14 +35,45 @@
       content: "";
       position: absolute;
       display: block;
-      width: 590px;
-      height: 527px;
-      top: 74px;
-      right: 110px;
+      width: 360px;
+      height: 379px;
+      transform: translateY(50%);
+      right: 5%;
+      background-image: url("../img/how-to-buy-mobile.png");
+      background-repeat: no-repeat;
+      background-size: 100%;
+    }
+  }
+
+  @include media-breakpoint-up(xl) {
+    padding-bottom: 161px;
+
+    &::before {
+      content: "";
+      position: absolute;
+      display: block;
+      transform: none;
+      width: 949px;
+      height: 736px;
+      top: -10px;
+      left: 50%;
       background-image: url("../img/how-to-buy.png");
       background-repeat: no-repeat;
       background-size: 100%;
     }
+  }
+
+  @include media-breakpoint-up(xxl) {
+    &::before {
+      left: calc(50% - 54px);
+    }
+  }
+}
+
+.how-to-buy__text-wrapper {
+  @include media-breakpoint-up(lg) {
+    padding-top: 83px;
+    // min-width: 70%;
   }
 }
 
@@ -53,8 +84,8 @@
 
   @include media-breakpoint-up(lg) {
     text-align: left;
-    padding-top: 83px;
     margin-bottom: 37px;
+    // max-width: 70%;
   }
 }
 
@@ -72,4 +103,8 @@
     line-height: 29px;
     font-weight: 400;
   }
+
+  // @include media-breakpoint-up(xxl) {
+  //   max-width: 63%;
+  // }
 }
