--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -75,3 +75,4 @@
 @import "components/pricing-options";
 @import "components/main";
 @import "components/parcel";
+@import "components/get-address";
