--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -19,12 +19,13 @@
     min-width: 285px;
   }
 
-  &--small {
-    min-width: auto;
+  &--medium-2 {
+    padding-top: 23px;
+    padding-bottom: 23px;
   }
 
-  &--white {
-    color: $blue;
+  &--small {
+    min-width: auto;
   }
 
   &::before {
@@ -74,5 +75,41 @@
 
   &:active {
     background-color: $blue-dark;
+  }
+
+  &--white {
+    color: $blue;
+
+    &::before {
+      content: "";
+      position: absolute;
+      left: 50%;
+      bottom: 0;
+      transform: translate(-50%, 50%);
+      display: block;
+      width: 90%;
+      height: 31px;
+      background-color: rgba($blue, 0.4);
+      border-radius: 20px;
+      filter: blur(44px);
+      z-index: -1;
+      opacity: 1;
+      transition: opacity 0.2s ease;
+      will-change: opacity;
+    }
+
+    &::after {
+      content: "";
+      position: absolute;
+      display: block;
+      width: 100%;
+      height: 100%;
+      left: 0;
+      top: 0;
+      background-color: rgba($white, 1);
+      border-radius: 20px;
+      z-index: -1;
+      transition: none;
+    }
   }
 }
