--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -22,6 +22,11 @@
   &--medium-2 {
     padding-top: 23px;
     padding-bottom: 23px;
+
+    @include media-breakpoint-up(lg) {
+      padding-top: 21px;
+      padding-bottom: 21px;
+    }
   }
 
   &--small {
