--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -15,7 +15,7 @@
         <div class="main-nav__mobile-wrapper">
           <div class="main-nav__wrapper">
             <ul class="main-nav__list">
-              <li class="main-nav__item"><a href="#">Как покупать в США</a></li>
+              <li class="main-nav__item"><a href="how-to-buy.html">Как покупать в США</a></li>
               <li class="main-nav__item"><a href="#">Калькулятор</a></li>
               <li class="main-nav__item"><a href="#">Скидки в США</a></li>
               <li class="main-nav__item"><a href="#">ЛикБез</a></li>
