--- a/src/scss/components/_how-to-buy.scss
+++ b/src/scss/components/_how-to-buy.scss
@@ -1,9 +1,3 @@
-.how-to-buy {
-  @include media-breakpoint-up(lg) {
-    margin-bottom: 158px;
-  }
-}
-
 .how-to-buy__wrapper {
   border-radius: 20px;
   background-color: $white;
@@ -31,49 +25,61 @@
       display: none;
     }
 
-    &::before {
-      content: "";
-      position: absolute;
-      display: block;
-      width: 360px;
-      height: 379px;
-      transform: translateY(50%);
-      right: 5%;
-      background-image: url("../img/how-to-buy-mobile.png");
-      background-repeat: no-repeat;
-      background-size: 100%;
-    }
+    // &::before {
+    //   content: "";
+    //   position: absolute;
+    //   display: block;
+    //   width: 360px;
+    //   height: 379px;
+    //   // transform: translateY(50%);
+    //   right: 5%;
+    //   background-image: url("../img/how-to-buy-mobile.png");
+    //   background-repeat: no-repeat;
+    //   background-size: 100%;
+    // }
   }
 
-  @include media-breakpoint-up(xl) {
-    padding-bottom: 161px;
+
+
+  @include media-breakpoint-up(xxl) {
+    &::before {
+      // left: calc(50% - 54px);
+    }
+  }
+}
+
+.how-to-buy__text-wrapper {
+  position: relative;
+
+  @include media-breakpoint-up(lg) {
+    padding-top: 83px;
+    // min-width: 70%;
 
     &::before {
       content: "";
       position: absolute;
       display: block;
-      transform: none;
-      width: 949px;
-      height: 736px;
-      top: -10px;
-      left: 50%;
+      top: 60%;
+      transform: translateY(-50%);
+      width: 301px;
+      height: 287px;
+      right: 0;
       background-image: url("../img/how-to-buy.png");
       background-repeat: no-repeat;
       background-size: 100%;
     }
   }
 
-  @include media-breakpoint-up(xxl) {
-    &::before {
-      left: calc(50% - 54px);
-    }
-  }
-}
+  @include media-breakpoint-up(xl) {
+    padding-bottom: 61px;
 
-.how-to-buy__text-wrapper {
-  @include media-breakpoint-up(lg) {
-    padding-top: 83px;
-    // min-width: 70%;
+    &::before {
+      width: 602px;
+      height: 574px;
+      top: -13px;
+      right: -103px;
+      transform: none;
+    }
   }
 }
 
