--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -74,6 +74,6 @@
 @import "components/how-details";
 @import "components/pricing-options";
 @import "components/main";
-@import "components/parcel";
+@import "components/delivery-options";
 @import "components/get-address";
 @import "components/option-no";
